@@ -6,15 +6,13 @@ class dl_extmatrix_com extends Download
     public function CheckAcc($cookie)
     {
         $data = $this->lib->curl("https://www.extmatrix.com/", $cookie, "");
-
         if (stristr($data, '<b>Premium Member</b>')) {
             return array(true, "Until " . strip_tags($this->lib->cut_str($data, 'Premium End:</td>', '</td>')));
         } else if (stristr($data, '<td>Free Member</td>')) {
             return array(false, "accfree");
-        } else {
-            return array(false, "accinvalid");
         }
 
+        return array(false, "accinvalid");
     }
 
     public function Login($user, $pass)
@@ -36,14 +34,12 @@ class dl_extmatrix_com extends Download
             if (preg_match('/<a id=\'jd_support\' href="(.*?)"><\/a>/', $data, $link)) {
                 return trim($link[1]);
             }
-
         } else {
             return trim($this->redirect);
         }
 
         return false;
     }
-
 }
 
 /*
@@ -51,5 +47,5 @@ class dl_extmatrix_com extends Download
  * New Vinaget by LTT
  * Version: 3.3 LTS
  * Extmatrix.com Download Plugin
- * Date: 22.05.2017
+ * Date: 31.10.2020
  */
