@@ -5,11 +5,11 @@ class dl_prefiles_com extends Download
 
     public function CheckAcc($cookie)
     {
-        $data = $this->lib->curl("http://fr.prefiles.com/", "", "");
+        $data = $this->lib->curl("https://prefiles.com/", "", "");
         $cok = $this->lib->GetCookies($data);
-        $data = $this->lib->curl("http://fr.prefiles.com/my-account", "{$cok}{$cookie}", "");
+        $data = $this->lib->curl("https://prefiles.com/my-account", "{$cok}{$cookie}", "");
         if (stristr($data, 'PRO Membership</dt>')) {
-            return array(true, "Until " . $this->lib->cut_str($data, '<dd class="small">', '</dd>') . "<br>Storage: " . strip_tags($this->lib->cut_str($data, '<td>Storage</td>', '</td>')) . "<br>Traffic: " . strip_tags($this->lib->cut_str($data, '<td>Traffic Remaining</td>', '</td>')));
+            return array(true, "Until " . $this->lib->cut_str($data, '<dd class="small">', '</dd>') . "<br>Storage: " . strip_tags($this->lib->cut_str($data, 'Storage</label></td>', '</td>')) . "<br>Traffic: " . strip_tags($this->lib->cut_str($data, 'Traffic remaining</label></td>', '</td>')));
         } elseif (stristr($data, '<dt>FREE Account</dt>') && !stristr($data, 'Username')) {
             return array(false, "accfree");
         }
@@ -19,9 +19,9 @@ class dl_prefiles_com extends Download
 
     public function Login($user, $pass)
     {
-        $data = $this->lib->curl("http://fr.prefiles.com/", "", "");
+        $data = $this->lib->curl("https://prefiles.com/", "", "");
         $cok = $this->lib->GetCookies($data);
-        $data = $this->lib->curl("http://fr.prefiles.com/login", $cok, "op=login&token=&rand=&redirect=&login={$user}&password={$pass}");
+        $data = $this->lib->curl("https://prefiles.com/login", $cok, "op=login&token=&rand=&redirect=&login={$user}&password={$pass}");
         $cookie = $this->lib->GetCookies($data);
 
         return array(true, $cookie);
@@ -30,7 +30,6 @@ class dl_prefiles_com extends Download
     public function Leech($url)
     {
         list($url, $pass) = $this->linkpassword($url);
-        $url = str_replace("//prefiles.com/","//fr.prefiles.com/", $url);
         $data = $this->lib->curl($url, $this->lib->cookie, "");
         if ($pass) {
             $post = $this->parseForm($this->lib->cut_str($data, '<form class="margin-clear"', '</form>'));
